# site

./: .autocorrectrc  .markdownlint.json  404.html  CNAME  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
ai/: index.html
ai-project/: index.html
blog/: index.html
blog/deepseek-demo/: index.html
blog/windows多用户ssh权限错误/: index.html
bookmarks/: index.html
docs/: CNAME  ai-project.md  ai.md  bookmarks.md  demo.md  hello.md  index.md  love.md  new.md  resources.md  study-guide.md  study-list.md  study.md  todo.md
docs/blog/: deepseek-demo.md  fix-git-push.md  windows多用户ssh权限错误.md
docs/idea/: basic-editor-needs.md
docs/ideas/: basic-editor-needs.md  index.md  note-style.md  study-guide.md
docs/llm/: transformer.md
docs/papers/: attention-is-all-you-need.md
docs/python/: python环境配置.md
docs/skills/: latex.md  markdown.md  postgresql.md  typst.md
docs/tools/: alacritty-config.md  alacritty.md  docker-install-hadoop.md  docker-install-sqlserver-easy.md  docker安装sqlserver.md  git-setting.md  git.md  index.md  mkdocs.md  neovim-config.md  neovim.md  python-setting.md  python.md  raspberry-pi.md  raspberry-setting.md  rime-setting.md  rime.md  scoop-setting.md  scoop.md  shenlan-dict.md  shenlan.md  (+7 more)
idea/: index.html
ideas/: index.html
overrides/: bookmarks.html
python/: index.html
resources/: index.html
search/: search_index.json
study/: index.html
study-guide/: index.html
study-list/: index.html
stylesheets/: extra.css
todo/: index.html
tools/: index.html
(+101 files in other folders)
